--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_expt_overlay_article_customization.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_expt_overlay_article_customization.scss
@@ -1,9 +1,9 @@
 
-.expertise__overlay{
+.capabilities__overlay{
     background: rgba(0, 0, 0, 0.92);
     height: 100vh;
     left: 0;
-    opacity: 0;
+    opacity: 0; 
     overflow-y: scroll;
     position: fixed;
     top: 0;
@@ -12,7 +12,7 @@
     width: 100%;
     max-width: 100%;
     z-index: 1001;
-color: $tungsten;
+    color: $tungsten;
     display: flex;
     flex-direction: column;
 
@@ -31,7 +31,7 @@ color: $tungsten;
 /*     margin-left: 2rem;
 margin-right: 2rem; */
      h4 {
-    @extend %subhead-lg;
+    @extend %subhead;
     }
     h5{
         @extend %subhead;
@@ -67,40 +67,11 @@ margin-right: 2rem; */
 }
 
 .overlay__content--head h5{
-@include vr($font-size: 6);
+@extend %display-text;
 @media (min-width: 48em){
-    @include vr($font-size: 4);
-}
-}
-
-
-
-/* .overlay__container > .overlay__content > p{
-    @media (min-width: 48em){
-        @include vr($font-size: 8, $line-height: 3);
-}
-} */
-
-/* .overlay__content--head{
-      h5 {
-        @extend %display-text-lg;
-      }
-      p{
-        @extend %display-text;
-        } 
-    
-          @include mq('tablet'){
-           h5{ 
-            @include vr($font-size: 3);
-        }
-        p{
-            @include vr($font-size: 3);
-        }
 
 }
-} */
-
-
+}
 
 
 .overlay__content{
@@ -108,7 +79,7 @@ margin-right: 2rem; */
      @include vr($font-size: 1);
  } */
 
-    p{}
+    p{ @extend %display-text-sm; }
     li{
         @include vr($line-height: 1.75, $font-size: 1);
     }
@@ -116,7 +87,7 @@ margin-right: 2rem; */
     @include make-col-ready();
     @include make-col(12);
     padding-left: 0;
-padding-right: 0;
+    padding-right: 0;
     @include mq('tablet'){
         @include vr($margin: 3 1 3 1);
         p{
@@ -126,6 +97,11 @@ padding-right: 0;
         }
     }
 
+}
+
+.overlay-intro p{
+    @extend %display-text-sm;
+    font-weight: 200;
 }
 
 .overlay-intro, .overlay__content{
@@ -149,19 +125,15 @@ padding-right: 0;
 #expt-overlay-5 {order: 6;@media (min-width: 78em){order: 5;}}
 
 .expt__close--button {
-    align-items: center;
     background: $primary;
-    border-radius: 100%;
     color: #fff;
-    cursor: pointer;
-    display: flex;
     height: 6rem;
-    justify-content: center;
+    width: 6rem;
     position: absolute;
     right: 4rem;
     top: 4rem;
-    width: 6rem;
-    z-index: 1000;
+    font-size: 3em;
+
 }
 
 .bottom{
@@ -219,7 +191,7 @@ margin-left: 19%;
 
 
 
-.expertise__overlay--webdev{
+.capabilities__overlay--webdev{
 
 .overlay__content{
 flex: 0 0 auto;
