--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_home_page_articles_styles_v2.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_home_page_articles_styles_v2.scss
@@ -85,6 +85,10 @@ p{
      @include vr($margin: 4 0);
      width: 20%;
    max-width: 20%;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
 }
 
 .content__intro_icon--background{
@@ -97,14 +101,26 @@ p{
       @include vr($margin: .75 0);
     }
 
-.intro__icon--rocket, .intro__icon--conversation, .intro__icon--fish{
+.intro__icon--rocket, .intro__icon--conversation{
         .cls-1{
-            fill: black;
+            fill: $black;
         }
     }
 
+.intro__icon--fish{
+    .st0{
+        fill: $black;
+    }
+}
+
 .intro__icon_caption{
     @extend %caption;
+    .br{
+        display: block;
+    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
    .content__item_intro--content{
@@ -440,9 +456,9 @@ justify-content: space-between;
 
 
 
-/* ////////////////////////////////////////////////////////////////////////// */
-/* //////////////////////            proof        /////////////////////////// */
-/* ///////////////////////////////////////////////////////////////////////////*/
+/* /////////////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////            proof article         /////////////////////////// */
+/* ////////////////////////////////////////////////////////////////////////////////////*/
 
 //container article styles
 #article__container--proof{
@@ -459,13 +475,6 @@ h3{
 .content__container_col{}
 .content__block{}
 h4{}
-h5{
-   @extend %subhead-sm;
-   font-family: $font-family-serif;
-    // @include vr($font-size: 2, $margin: 0 0 4 0);
-    letter-spacing: 0;
-    font-weight: 400;
-}
 p{font-family: $font-family-serif;} 
 .content__item_col{}
 }
@@ -484,16 +493,6 @@ p{font-family: $font-family-serif;}
     padding: 4em;
 }
 }
-
-#idooutcomes{
-    @include vr($padding: 0 3 0 3);
-    border: .25em solid $gray-500;
-    position: relative;
-    @include mq('tablet', $type: max){
-    min-height: 600px;
-    }
-}
-
 
 
 h2.proof-intro{
@@ -526,34 +525,6 @@ h2.proof-intro, .proof__item_container h5{
         @include vr($font-size: 1);
 }
 
-
-
-
-
-
-
-
-#trend-arrow, #end2end__diagram_container, #stats-slider{
-    width: 100%;
-    display: block;
-    @include push-auto();
-} 
-
-#trend-arrow{
-    z-index: -1;
-    height: 35em;
-    top: 5em;
-    left: -2em;
-    width: 125%;
-    svg#Layer_1{
-        width: 90%;
-
-    }
-    .st0{
-       fill:rgba(106, 173, 217, .5);
-    }
-}
-
 #proof__content_marketer > div > p > em{
     color: $primary;
     font-weight: 300;
@@ -570,6 +541,67 @@ padding: 6em .25em;}
     border: none;
 }
 
+#end2end__diagram_container, #stats-slider{
+    width: 100%;
+    display: block;
+    @include push-auto();
+} 
+
+// #trend-arrow{
+//     z-index: -1;
+//     height: 35em;
+//     top: 5em;
+//     left: -2em;
+//     width: 125%;
+//     svg#Layer_1{
+//         width: 90%;
+
+//     }
+//     .st0{
+//        fill:rgba(106, 173, 217, .5);
+//     }
+// }
+
+///////////////////////////////////////////////////////////////////
+// i do outcomes panel
+//////////////////////////////////////////////////////////////////
+#idooutcomes{
+    @include vr($padding: 0 3 0 3);
+    border: .25em solid $gray-300;
+    position: relative;
+     h5{
+   @extend %subhead-sm;
+   font-family: $font-family-serif;
+    // @include vr($font-size: 2, $margin: 0 0 4 0);
+    letter-spacing: 0;
+    font-weight: 400;
+}
+    @include mq('tablet', $type: max){
+    min-height: 600px;
+    }
+}
+
+//////////////////////////////////////////////////////////////////////////
+//proof diagram customization
+// #idooutcomes{ 
+// & h5 {
+// @extend %body-text-lg;
+// @include vr($margin-bottom: 2);
+// text-style: italic;
+// }
+// & .caption{
+//     max-width: 17em;
+
+// }
+// }
+
+
+
+///////////////////////////////////////////////////////////////////
+// end to end equation panel
+//////////////////////////////////////////////////////////////////
+
+
 #end2end__diagram_container{
     display: flex;
     flex-direction: column;
@@ -582,6 +614,14 @@ padding: 6em .25em;}
     h5, p{
         color: $offwhite;
     }
+    h5{
+        @extend %display-text-sm;
+        font-weight: 400;
+
+    }
+%display-text-sm{
+            @include vr($margin-bottom: 4);
+        }
     .proof__content_text{
         width: 100%;
         @include vr($width: 24, $margin-top:2);
@@ -628,12 +668,16 @@ text-align: center;
 @include vr($font-size: 4, $margin: 1 0 1 0);
 }
 
+
+///////////////////////////////////////////////////////////////////
+// I've been around / stats slider panel
+//////////////////////////////////////////////////////////////////
+
 #proof__content_vitae{}
 .vitae__stats{}
 #stats-slider{
     @include vr($margin-bottom: 1);
 } 
-
 
 
 .quals svg{
@@ -649,8 +693,6 @@ display: block;
 }
 }
 
-
-
 .quals{
  float: left;
  padding-left: 15px;
@@ -661,37 +703,25 @@ display: block;
 @include mq('desktop'){
     @include make-col(4);
 }
-
 }
 
-/* #odd-stats{
- @include make-col(3);
- height: 100%;
-} */
 
+.vitae__stats {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
+.vitae__stats.carousel {
+   overflow: hidden;
+   display: block;
+   }
 
-
-    .vitae__stats {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-         .vitae__stats.carousel {
-            overflow: hidden;
-            display: block;
-          /*   @include vr($margin-top: 1, $margin-bottom: 3 ); */
-            }
-
-    .vitae__stats--title {
-        margin-top: 4rem;
-        text-align: center;
-
-        /*        border: 1rem solid #111;
-        padding: 2rem 0; */
-        display: none;
-    }
+.vitae__stats--title {
+    margin-top: 4rem;
+    text-align: center;
+    display: none;
+}
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
@@ -707,7 +737,7 @@ display: block;
 }
 
 #stats-slider{
-/* @include vr($margin-top: 3, $margin-bottom: 3); */
+ @include vr($margin: 0); 
 }
 
  .carousel-control-next-icon{
@@ -719,7 +749,72 @@ display: block;
     margin-right: auto;
  }
   
-    
+       .stats-caption{
+
+     position: relative;
+     padding-top: 0;
+     padding-bottom: 0;
+     bottom: 0;
+     width: 100%;
+     margin-top: 0;
+     left: 0;
+
+    }
+
+    .stats-caption h6{
+              @extend %caption;
+          // @include vr($font-size: 1, $margin-bottom: 0, $margin-top: 0, $line-height: 1.25);
+          @include push-auto();
+          font-weight: 300;
+           color: $gray-900;
+          letter-spacing: .03em;
+    }
+
+
+#proof__content_vitae > div.proof__content_text > p{
+    @include vr($margin-top: 0);
+}
+
+
+///////////////////////////////////////////////////////////////////
+// Professional About Service panel
+//////////////////////////////////////////////////////////////////
+
+#proof__service{
+    @include vr($padding: 4 0 4 0, $width: 100%);
+}
+
+#proof__you{
+    width: 100%;
+    @include vr($padding: 5);
+    p{
+    text-align: center;
+    margin-bottom: 0;   
+        }
+    h5{
+        text-transform: capitalize;
+        @include vr($margin-bottom: 1);
+        font-family: $font-family-serif;
+        font-style: italic;
+    }
+}
+
+#bell__small{
+    svg#Layer_1{
+        fill: $black;
+            width: 20%;
+    display: block;
+    @include vr($margin: 4 auto 0 auto);
+}
+}
+
+
+
+
+
+////////////////////orphans
+
+
 
     #digits {
         color: $qualifications-icon-fill-color;
@@ -742,45 +837,6 @@ display: block;
         @include vr($margin-top: 2);
     }
 
-  
-    .stats-caption{
-     @extend %caption;
-     position: relative;
-     padding-top: 0;
-     padding-bottom: 0;
-     bottom: 0;
-     width: 100%;
-     margin-top: 0;
-     left: 0;
-
-    }
-
-    .stats-caption h6{
-          @include vr($font-size: 1, $margin-bottom: 0, $margin-top: 0, $line-height: 1.25);
-          @include push-auto();
-          font-weight: 300;
-           color: $gray-800;
-          letter-spacing: .03em;
-    }
-
-/*     .carousel-control-prev{
- display: block;
- height: 3rem;
- width: 3rem;
-} */
-
-
-
-
-
-
-
-
-
-    // .quals svg{
-    //  width: 50%;
-    // }
-
 
     @include mq("tablet-wide") {
         .content-container {
@@ -802,59 +858,3 @@ display: block;
             display: block;
         }
     }
-
-
-#proof__service{}
-
-
-#bell__small{
-    svg#Layer_1{
-        fill: $black;
-            width: 20%;
-    display: block;
-    @include vr($margin: 4 auto 0 auto);
-}
-}
-
-
-
-h5{}
-p.caption{}
-.content__item_row{}
-.content__item_img{}
-
-.link{}
-
-
-.content__container_row{}
-
-
-
-//////////////////////////////////////////////////////////////////////////
-//proof diagram customization
-#idooutcomes{ 
-& h5 {
-@extend %body-text-lg;
-@include vr($margin-bottom: 2);
-text-style: italic;
-}
-& .caption{
-    max-width: 17em;
-
-}
-}
-
-#proof__you{
-    @include vr($padding: 5);
-    p{
-    text-align: center;
-    margin-bottom: 0;   
-        }
-    h5{
-        text-transform: capitalize;
-        @include vr($margin-bottom: 1);
-        font-family: $font-family-serif;
-        font-style: italic;
-    }
-}
-
