--- a/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
@@ -257,11 +257,16 @@ left: 0;
 }
 
 
+svg.chev--dwn{
+      stroke: #111;  
+    stroke-linecap: round;
+    stroke-width: .5em;
+    width: 3rem;
+    height: 3rem;
+    display: block;
 
+}
 
-// ==========================================================================
-// scroll top
-// ==========================================================================
 .scroll-top{
     position: fixed;
     /* Fixed/sticky position */
@@ -285,9 +290,6 @@ left: 0;
     }
 }
 
-// ==========================================================================
-// container modules
-// ==========================================================================
 
 .content1, .content2{
   padding-left: 0;
