--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/_layout_styles_import.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/_layout_styles_import.scss
@@ -1,34 +1,34 @@
 
-@import "theme/partials/layout/article_templates/splash_article_layout_template";
-@import "theme/partials/layout/article_templates/cta_article_layout_template";
-@import "theme/partials/layout/article_templates/contact_article_layout_template";
-@import "theme/partials/layout/article_templates/core_layout_template";
-@import "theme/partials/layout/article_templates/why-me_article_layout_template";
+// @import "theme/partials/layout/article_templates/splash_article_layout_template";
+// @import "theme/partials/layout/article_templates/cta_article_layout_template";
+// @import "theme/partials/layout/article_templates/contact_article_layout_template";
+// @import "theme/partials/layout/article_templates/core_layout_template";
+// @import "theme/partials/layout/article_templates/why-me_article_layout_template";
 
-@import "theme/partials/layout/modules/my_value_page_header_module";
-@import "theme/partials/layout/modules/capabilities_table_module";
-@import "theme/partials/layout/modules/value_table_module";
+// @import "theme/partials/layout/modules/my_value_page_header_module";
+// @import "theme/partials/layout/modules/capabilities_table_module";
+// @import "theme/partials/layout/modules/value_table_module";
 
-@import "theme/partials/layout/modules/_modules";
-@import "theme/partials/layout/modules/custom_cards_module";
+// @import "theme/partials/layout/modules/_modules";
+// @import "theme/partials/layout/modules/custom_cards_module";
 
-@import "theme/partials/layout/article_styles/splash_articles_styles";
-@import "theme/partials/layout/article_styles/home_page_articles_styles_v2";
-// @import "theme/partials/layout/article_styles/home_page_articles_styles";
-@import "theme/partials/layout/article_styles/my_expertise_page_articles_styles";
-// @import "theme/partials/layout/article_styles/management_page_articles_styles";
-@import "theme/partials/layout/article_styles/development_page_articles_styles";
-@import "theme/partials/layout/article_styles/hire_me_page_articles_styles";
+// @import "theme/partials/layout/article_styles/splash_articles_styles";
+// @import "theme/partials/layout/article_styles/home_page_articles_styles_v2";
+// // @import "theme/partials/layout/article_styles/home_page_articles_styles";
+// @import "theme/partials/layout/article_styles/my_expertise_page_articles_styles";
+// // @import "theme/partials/layout/article_styles/management_page_articles_styles";
+// // @import "theme/partials/layout/article_styles/development_page_articles_styles";
+// // @import "theme/partials/layout/article_styles/hire_me_page_articles_styles";
 
-@import "theme/partials/layout/article_styles/base_articles_styles";
-@import "theme/partials/layout/article_styles/services_articles_styles";
-@import "theme/partials/layout/article_styles/background_articles_styles";
-@import "theme/partials/layout/article_styles/evidence_articles_styles";
+// @import "theme/partials/layout/article_styles/base_articles_styles";
+// @import "theme/partials/layout/article_styles/services_articles_styles";
+// @import "theme/partials/layout/article_styles/background_articles_styles";
+// @import "theme/partials/layout/article_styles/evidence_articles_styles";
 
-@import "theme/partials/layout/article_styles/atypical_article_customization";
-@import "theme/partials/layout/article_styles/brand_history_customization";
-@import "theme/partials/layout/article_styles/category_history_customization";
-@import "theme/partials/layout/article_styles/expt_overlay_article_customization";
+// @import "theme/partials/layout/article_styles/atypical_article_customization";
+// @import "theme/partials/layout/article_styles/brand_history_customization";
+// @import "theme/partials/layout/article_styles/category_history_customization";
+// @import "theme/partials/layout/article_styles/expt_overlay_article_customization";
 // @import "theme/partials/layout/article_styles/my_value_articles_customization";
 
-@import "theme/partials/layout/modules/my_value_diagrams";
+
