--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_color_and_nav_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_color_and_nav_variables.scss
@@ -102,8 +102,12 @@ $slate-dark-rgba:                   rgba(59,68,76, 1);
 $offwhite1:                         rgba(253, 253, 253, 1);
 $offwhite:                          rgba(250,250,250, 1);
 $ghostwhite:                        #F8F8FF;
-                                    
-                                    
+$lightgray:                         #d3d3d3;
+$silver:                            #c0c0c0;
+$darkgray:                          #a9a9a9;
+$gray:                              #808080;
+$grayrgba:                          rgba(128,128,128,1);
+                                      
 $slate:                             #778899;
 $tungsten:                          #D2DBE2;
 $blue:                              #007bff !default;
